# airbnb-clone-backend

./: airbnb_clone.md  info_0_airbnb_clone_all.txt  info_1_pyhon.txt  info_2_Django.txt  info_2_poetry.txt  info_3_git.txt  pyproject.toml
__info/: info_0_airbnb_clone_all.md  info_4_oop_with_python.md
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentications.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_perk_explanation_alter_perk_detail.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py  0003_rename_price_house_price_for_night.py  0004_rename_price_for_night_house_price_per_night.py  0005_alter_house_pets_allowed.py
info/: info_0_airbnb_clone_all.md  info_0_airbnb_clone_all.txt  info_1_pyhon.md
medias/: admin.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py  (+2 more)
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  (+1 more)
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  views.py
wishlists/: admin.py  models.py  views.py
(+16 files in other folders)
